--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,5 +44,7 @@ python-dateutil = "^2.8.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.12",
+            "poetry-core>=1.0.0",
+            "setuptools>=30.3.0,<50"]
 build-backend = "poetry.masonry.api"
